# DRAGON2

./: .gitignore  CMakeLists.txt  README_compile.txt
app/cli/: CMakeLists.txt  main.cpp
app/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
app/minimal/: CMakeLists.txt  main.cpp
fortran/: CMakeLists.txt  dragon2_f_api.f90
include/dragon2/core/: hello.hpp
src/: CMakeLists.txt
src/core/: fwrap.cpp  hello.cpp
